Added cattery index and show page

--- a/app/javascript/stylesheets/base/variables.scss
+++ b/app/javascript/stylesheets/base/variables.scss
@@ -55,3 +55,8 @@ $errorShade: #e53935;
 
 // Image thumbnails resolution
 $imgHeight: 300px;
+
+// Social media
+$facebook-primary: #3b5998;
+$instagram-primary: #C13584;
+$twitter-primary: #00acee;
