--- a/app/views/cats/show.html.erb
+++ b/app/views/cats/show.html.erb
@@ -201,6 +201,6 @@
     </div>
   <% end %>
   <div id="contact" class="section contact">
-    <%= render 'shared/contact_form' %>
+    <%= render 'shared/contact_form', cat: @cat %>
   </div>
 </div>
