--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -29,7 +29,7 @@
         <div class="carousel-item">
           <div class="card">
             <div class="card-image">
-              <%= image_tag("placeholder_picture_1.jpg", :alt => "breed", class:"activator") %>
+              <%= image_tag("maine_coon_placeholder.jpg", :alt => "breed", class:"activator") %>
             </div>
             <div class="card-content activator">
               Maine Coon
@@ -45,7 +45,7 @@
         <div class="carousel-item">
           <div class="card">
             <div class="card-image">
-              <%= image_tag("placeholder_picture_2.jpg", :alt => "breed", class:"activator") %>
+              <%= image_tag("scottish_fold_placeholder.jpg", :alt => "breed", class:"activator") %>
             </div>
             <div class="card-content activator">
               Scottish Fold
@@ -61,7 +61,7 @@
         <div class="carousel-item">
           <div class="card">
             <div class="card-image">
-              <%= image_tag("placeholder_picture_3.jpg", :alt => "breed", class:"activator") %>
+              <%= image_tag("bengal_placeholder.jpg", :alt => "breed", class:"activator") %>
             </div>
             <div class="card-content activator">
               Bengal
@@ -77,7 +77,7 @@
         <div class="carousel-item">
           <div class="card">
             <div class="card-image">
-              <%= image_tag("placeholder_picture_4.jpg", :alt => "breed", class:"activator") %>
+              <%= image_tag("british_shorthair_placeholder.jpg", :alt => "breed", class:"activator") %>
             </div>
             <div class="card-content activator">
               British Shorthair
@@ -93,7 +93,7 @@
         <div class="carousel-item">
           <div class="card">
             <div class="card-image">
-              <%= image_tag("placeholder_picture_5.jpg", :alt => "breed", class:"activator") %>
+              <%= image_tag("norwegian_forest_cat_placeholder.jpg", :alt => "breed", class:"activator") %>
             </div>
             <div class="card-content activator">
               Norwegian Forest Cat
