--- a/app/views/users/registrations/edit.html.erb
+++ b/app/views/users/registrations/edit.html.erb
@@ -49,6 +49,15 @@
       </div>
 
       <div class="row">
+        <% if @user.is_cattery %>
+          <%= link_to my_cattery_cattery_path(@user), class:"waves-effect waves-light btn-large btn-link" do %>
+            Go to my cattery
+            <i class="material-icons right">navigate_next</i>
+          <% end %>
+        <% end %>
+      </div>
+
+      <div class="row">
         <h4 class="form-section-title">Change password</h4>
         <em class="title-info">(leave blank to not change)</em>
       </div>
