--- a/app/javascript/stylesheets/modules/form.scss
+++ b/app/javascript/stylesheets/modules/form.scss
@@ -136,7 +136,6 @@
     display: inline-block;
     background-color: $secondaryShade5;
     transition: cubic-bezier(0.39, 0.58, 0.57, 1) 0.2s;
-    margin-left: 0.75rem;
 
     &:hover, &:focus {
       transform: scale(1.05);
@@ -519,9 +518,11 @@ button.btn-delete {
 
 
 // Social media icons
+
+// My cattery page
 .form {
   .fa-facebook-square.active, .fa-facebook-square.active-social {
-    color: #3b5998;
+    color: $facebook-primary;
   }
 
   .fa-instagram {
@@ -529,11 +530,72 @@ button.btn-delete {
   }
 
   .fa-instagram.active, .fa-instagram.active-social {
-    color: #C13584;
+    color: $instagram-primary;
   }
 
   .fa-twitter.active, .fa-twitter.active-social {
-    color: #00acee;
+    color: $twitter-primary;
+  }
+}
+
+// buttons to my cattery pages
+.my-cattery-pages {
+  @include small-and-down {
+    .col {
+      width: 100%;
+
+      &:nth-child(0) {
+        margin-top: -20px;
+      }  
+    }
+
+    .btn-large {
+      display: block;
+      margin: 0 auto;
+      width: 75%;
+      
+      &:nth-child(1) {
+        margin-top: 25px;
+      }
+    }
+  }
+}
+
+// Show page
+.social {
+  width: 100%;
+  margin: 15px 0px;
+
+  @include small-and-down {
+    .col {
+      text-align: center;
+    }
+  }
+  
+  .btn-large {
+    margin: 0px 10px;
+    transition: 0.2s cubic-bezier(0.57, 0.04, 0.61, 1.3);
+
+    &:hover {
+      transform: scale(1.15);
+      
+    }
+  }
+
+  .fa-instagram {
+    font-size: 2em;
+  }
+
+  .facebook {
+    background-color: $facebook-primary !important;
+  }
+  
+  .instagram {
+    background-color: $instagram-primary !important;
+  }
+  
+  .twitter {
+    background-color: $twitter-primary !important;
   }
 }
 
@@ -576,6 +638,10 @@ button.btn-delete {
       @include small-and-up {
         padding-left: 15px;
       }
+
+      @include small-and-down {
+        font-size: 1.8em !important;
+      }
       
       &:first-child {
         margin-top: $contact-margin-top-first;
@@ -588,7 +654,11 @@ button.btn-delete {
       .info-title {
         text-align: right;
         position: relative;
-        right: 10px;
+        right: 15px;
+
+        @include small-and-down {
+          text-align: left;
+        }
       }
 
       .info-title, .info-text {
