Added friendly id to users

--- a/app/javascript/stylesheets/modules/home.scss
+++ b/app/javascript/stylesheets/modules/home.scss
@@ -135,6 +135,10 @@
       .card-image {
         overflow: hidden;
         max-height: 300px;
+
+        @include small-and-down {
+          max-height: 250px;
+        }
       }
 
       .card-content, .card-reveal {
