--- a/app/views/cats/index.html.erb
+++ b/app/views/cats/index.html.erb
@@ -9,7 +9,7 @@
 
   <div class="container">
     <% if @kittens.present? %>
-      <div id="kittens" class="row">
+      <div id="kittens">
         <%= render partial: 'page_items' %>
       </div>
     <% else %>
