--- a/app/views/users/registrations/edit.html.erb
+++ b/app/views/users/registrations/edit.html.erb
@@ -50,7 +50,7 @@
 
       <div class="row">
         <% if @user.is_cattery %>
-          <%= link_to my_cattery_cattery_path(@user), class:"waves-effect waves-light btn-large btn-link" do %>
+          <%= link_to my_cattery_cattery_path(@user), class:"waves-effect waves-light btn btn-link" do %>
             Go to my cattery
             <i class="material-icons right">navigate_next</i>
           <% end %>
