--- a/app/javascript/stylesheets/modules/show.scss
+++ b/app/javascript/stylesheets/modules/show.scss
@@ -1,5 +1,5 @@
 // Kitten show page
-#kitten-view, #cattery-view {
+#kitten-view, #cattery-view, #contact {
   img {
     border-radius: 5px;
     box-shadow: 0 4px 5px 0 rgba(0,0,0,0.14), 0 1px 10px 0 rgba(0,0,0,0.12), 0 2px 4px -1px rgba(0,0,0,0.3);
@@ -83,6 +83,14 @@
   }
 
   // Masonry layout
+  .grid {
+    display: none;
+  }
+
+  .grid.active {
+    display: block;
+  }
+
   .grid-col {
     float: left;
     height: auto;
@@ -97,6 +105,16 @@
     .grid-col--1, .grid-col--2 {
       display: none;
     }
+  }
+
+  .preloader-wrapper {
+    display: none;
+    text-align: center;
+  }
+
+  .preloader-wrapper.active {
+    display: block;
+    margin: 10px auto;
   }
 
   .pictures-other-container {    
