--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -105,7 +105,7 @@
             <h5 class="footer-title white-text">Support</h5>
             <ul>
               <li><a class="grey-text text-lighten-3" href="#!">Help</a></li>
-              <li><a class="grey-text text-lighten-3" href="#!">Contact</a></li>
+              <li><%= link_to "Contact", contact_home_path(@support), class:"grey-text text-lighten-3" %></li>
             </ul>
           </div>
           <div class="col l6 s12">
