--- a/app/views/shared/_contact_form.html.erb
+++ b/app/views/shared/_contact_form.html.erb
@@ -11,6 +11,13 @@
           <br>
         </div>
 
+        <%= f.hidden_field :user_id, value: user.id %>
+        <%= f.hidden_field :receiver_name, value: user.cattery_name %>
+        <%= f.hidden_field :cattery_email, value: user.email %>
+        <% if cat.present? %>
+          <%= f.hidden_field :cat_id, value: cat.id %>
+        <% end %>
+
         <div class="row">
           <div class="col s12">
             <div class="input-field">
@@ -51,7 +58,7 @@
         <div class="row">
           <div class="actions">
             <div class="col">
-              <%= f.button class:"btn-large waves-effect waves-light", type:"submit", name:"cat_id", value: cat.id do %>
+              <%= f.button class:"btn-large waves-effect waves-light", type:"submit" do %>
                 Send
                 <i class="material-icons right">send</i>
               <% end %>
@@ -68,19 +75,19 @@
             Email:
           </div>
           <div class="col s8 m8 info-text">
-            <%= mail_to cattery(cat).email, class:"info-link" do %>
-              <%= cattery(cat).email %>
+            <%= mail_to user.email, class:"info-link" do %>
+              <%= user.email %>
             <% end %>
           </div>
         </div>
-        <% if cattery(cat).phone_number.present? %>
+        <% if user.phone_number.present? %>
           <div class="contact-info-block">
             <div class="col s4 m4 info-title">
               Phone:
             </div>
             <div class="col s8 m8 info-text">
-              <%= link_to "tel:#{cattery(cat).phone_number}", class:"info-link" do %>
-                <%= cattery(cat).phone_number %>
+              <%= link_to "tel:#{user.phone_number}", class:"info-link" do %>
+                <%= user.phone_number %>
               <% end %>
             </div>
           </div>
