Added cattery index filtering

--- a/app/javascript/stylesheets/modules/form.scss
+++ b/app/javascript/stylesheets/modules/form.scss
@@ -667,3 +667,14 @@ button.btn-delete {
     }
   }
 }
+
+// Preloader
+.preloader-wrapper {
+  display: none;
+  text-align: center;
+}
+
+.preloader-wrapper.active {
+  display: block;
+  margin: 10px auto;
+}
